--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,9 @@
                     <div class ="teasnav sixfont padding">Teas</div>
                 </div>
                 <div class = "border hov">
-                    <div class ="brewwaresnav sixfont margin"> Brew Wares</div>
+                    <div class ="brewwaresnav sixfont margin"> 
+                        <a href="https://www.w3schools.com">Brew Wares</a>
+                    </div>
                 </div>
                 <div class = "border hov">
                     <div class ="cart sixfont margin"> Cart
@@ -101,51 +103,42 @@
         </div>            
 
     <!-- The 5 teas displayed in 5 columns in one row -->
-    <div class="teas">
-         
-            <div>
-              
-                    <img src="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/black_ad4be5cb-6a95-484a-bb94-2239b1a929ec_400x400_crop_center.png?v=1526857313&auto=format&q=50&" /> 
-                
+    <div class="teas">        
+            <div>             
+                <img src="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/black_ad4be5cb-6a95-484a-bb94-2239b1a929ec_400x400_crop_center.png?v=1526857313&auto=format&q=50&" />              
                 <p class = "tealign hov">Black</p>
             </div>
-
             <div>
                 <img src ="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/green_185f8bdd-cab4-49e0-bedf-b28cdf516b0a_400x400_crop_center.png?v=1526857011&auto=format&q=50&"/>
                 <p class = "tealign hov">Green</p>
-            </div>
-            
-
+            </div>            
             <div>
                 <img src ="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/white_759d97b9-d4b2-48d2-882f-0d1b9ccff0ab_400x400_crop_center.png?v=1526857136&auto=format&q=50&"/>
                 <p class = "tealign hov">White</p>
-            </div>
-            
+            </div>          
             <div>
                 <img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/tisane_400x400_crop_center.png?v=1526856907&auto=format&q=50&"/>
                 <p class = "tealign hov">Tisanes</p>
             </div>
-
             <div> <img src = "https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/blend_400x400_crop_center.png?v=1526857239&auto=format&q=50&"/>
                 <p class = "tealign hov">Blends</p>
             </div>
-
     </div>
     <!-- The three columns with the background images fetched from an api -->
         <div class="three">
-        <div class="three1">
+        <div class="three1" id = "one">
             <h1 class="centeredmain">Teas</h1>
-            <h3 class="centered2">SHOP NOW</h3>
+            <h3 class="white">SHOP NOW</h3>
         </div>
 
-        <div class = "three2">
+        <div class = "three1" id = "two">
             <h1 class="centeredmain">Merch</h1>
-            <h3 class="centered2">SHOP NOW</h3>
+            <h3 class = "white">SHOP NOW</h3>
         </div>
 
-        <div class="three3">
+        <div class="three1" id = "three">
             <h1 class="centeredmain"> Wares</h1>
-           <h3 class="centered2">SHOP NOW</h3>
+           <h3 class="white" >SHOP NOW</h3>
         </div>
     </div>
     
