Add in link to other Wares page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
                 </div>
                 <div class = "border hov">
                     <div class ="brewwaresnav sixfont margin"> 
-                        <a href="https://www.w3schools.com">Brew Wares</a>
+                        <a href="/wares">Brew Wares</a>
                     </div>
                 </div>
                 <div class = "border hov">
