--- a/views/index.ejs
+++ b/views/index.ejs
@@ -222,7 +222,7 @@
 
     </div>
 
-
+<p class="midfoot">(c) 2022 Swallowtail Tea</p>
 
     <script src="js/main.js"></script>
     <script src="js/fetch.js"></script>
