--- a/views/index.ejs
+++ b/views/index.ejs
@@ -145,14 +145,14 @@
 
     
 <!-- The info div which has two halves displaying the information on the website -->
-<div class = "infopx">
+<div class = "infopx mb3">
     <p class = "margin";">Sign up and get 10% off your first purchase.</p>   
     <p class = "email""> Your email address . . . </p>
     <p class = "buttonbot upperclass hov">Join</p>
 </div> 
 
 
-<div class="info">
+<div class="info mb3">
     <div class = "info1">
         <p style="font-weight: bold;">Swallowtail Tea</p>
         <p style="color: #969A97">Swallowtail Tea is a Virginia-based tea company sourcing only the</p>
@@ -165,7 +165,7 @@
 
 </div>
 <!-- The Footer along the bottom  -->
-    <div class = "foothead">
+    <div class = "foothead borderbottom">
         <div class = "margin"> 
             <ul>
                 <li><h3>SHOP</h3></li>
@@ -190,7 +190,7 @@
         </div>  
     </div>
     
-    <div class = "footbod">
+    <div class = "foothead">
         <div>
             <ul>
                 <li><h4>ALL</h4></li>
@@ -225,7 +225,6 @@
 <p class="midfoot">(c) 2022 Swallowtail Tea</p>
 
     <script src="js/main.js"></script>
-    <script src="js/fetch.js"></script>
 
 
 </body>
