--- a/views/wares.ejs
+++ b/views/wares.ejs
@@ -59,7 +59,10 @@
 
 
      <div id = "warespage">
-
+        <div>
+            <h1>Wares</h1>
+            <h3> We offer many products that will complement your experience with Swallowtail Tea.</h3>
+        </div>
     </div>
     <div class = "infopx">
         <p class = "margin";">Sign up and get 10% off your first purchase.</p>   
@@ -68,7 +71,7 @@
     </div> 
     
     
-    <div class="info">
+    <div class="info mb3">
         <div class = "info1">
             <p style="font-weight: bold;">Swallowtail Tea</p>
             <p style="color: #969A97">Swallowtail Tea is a Virginia-based tea company sourcing only the</p>
