(DeleteReusedCode): Delete more repetitious code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,26 +38,26 @@
                     </div>
                 </div>
                 <div class = "border hov">
-                    <div class ="teasnav sixfont padding">Teas</div>
+                    <div class ="flex3 ">Teas</div>
                 </div>
                 <div class = "border hov">
-                    <div class ="brewwaresnav sixfont margin"> 
+                    <div class ="flex3"> 
                         <a href="/wares">Brew Wares</a>
                     </div>
                 </div>
                 <div class = "border hov">
-                    <div class ="cart sixfont margin"> Cart
+                    <div class ="flex3"> Cart
                         <i style="text-align: right; position: absolute; left: 85%;" class="fa-solid fa-lock"></i>
                     </div>
                 </div>
                 <div class = "border hov">
-                    <div class ="merch sixfont margin"> Merch</div>
+                    <div class ="flex3"> Merch</div>
                 </div>
                 <div class = "border hov">
-                    <div class ="aboutus sixfont margin"> About Us</div>
+                    <div class ="flex3"> About Us</div>
                 </div>
                 <div class = "border hov">
-                    <div class ="wholesalenav sixfont margin"> Wholesale</div>
+                    <div class ="flex3"> Wholesale</div>
                 </div>
             </div>
             <div class ="navbar2">
