--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,6 +95,14 @@ a[href] {
     display: flex;
 }
 
+.flex3{
+    display: flex;
+    font-size:medium;
+    text-transform: uppercase;
+    text-align: left;
+    margin-bottom: 20px;  
+}
+
 .navbar3list li{
     opacity: .4;
     transition: opacity .5s ease;   
@@ -204,15 +212,7 @@ a[href] {
     color: var(--maindark);
 }
 
-.sixfont {
-    font-size:medium;
-    text-transform: uppercase;
-    text-align: left;  
-}
 
-.padding{
-    padding-bottom: 15px;
-}
 
 
 
@@ -224,28 +224,6 @@ a[href] {
 .marginauto{
     margin-left: auto;
     margin-right: auto;
-}
-
-
-
-.brewwaresnav {
-    display: flex;   
-}
-
-.cart {
-    display: flex;
-}
-
-.merch {
-    display: flex;
-}
-
-.aboutus {
-    display: flex;
-}
-
-.wholesalenav {
-    display: flex;
 }
 
 
@@ -323,7 +301,6 @@ img{
     text-align: center;
     color: white;
     margin-bottom: 20px;
-
 }
 
 .centeredmain h1{
@@ -359,8 +336,6 @@ img{
 #three{
     background-image:url('https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/home_brew_wares_650x.jpg?v=1526915416&auto=format&q=50&');
   }
-
-
     
 .three1 { 
     background-size: cover;
@@ -395,7 +370,6 @@ img{
     background: #f5f5f1;
     padding-top: 5%;
     padding-left: 20%;
-
 }
 
 .info2 {
@@ -489,6 +463,14 @@ img{
     margin-left: 12.5%;
     margin-bottom: 50px;
     position: relative;
+}
+
+.louize{
+    font-family: "Louize Display", Garamond, sans-serif;
+}
+
+.forty{
+    font-size: 40px;
 }
 
 .margins{
