Add(DivOnWares): Add Div on Wares with list in first div

--- a/views/wares.ejs
+++ b/views/wares.ejs
@@ -57,12 +57,16 @@
         <div class ="flex3"> Wholesale</div>
     </div>
 </div>
-
-
      <div id = "warespage">
         <div class="louize">
             <h1 class="forty">Wares</h1>
             <h3> We offer many products that will complement your experience with Swallowtail Tea.</h3>
+            <ul class="listwares">
+                <li>ACCESSORIES</li>
+                <li>CANDLES</li>
+                <li>GLASSWARE</li>
+                <li>POTTERY</li>
+            </ul>
         </div>
     </div>
     <div class = "infopx">
