--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -473,6 +473,26 @@ img{
     font-size: 40px;
 }
 
+.listwares{
+    list-style: none;
+    margin: 10px;
+    padding: 20px;
+    display: inline-block;
+    font-size: 20px;
+}
+
+.listwares li{
+     border-radius: 35px;
+     border: 2px solid var(--mainlight);
+     margin-bottom: 10px;
+     height: 30px;
+     padding: 5px;
+}
+
+.listwares li:hover{
+    text-decoration: underline;
+}
+
 .margins{
     width: 75%;
     margin-top: 40px;
