Add(README): Add ReadMe describing website

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <body>
     <!-- The Background images and Navbar in the following Div -->
         <div id="scroll-image">
-            
+            <!-- the two navbars which display depending on the pixel width of the screen -->
             <div class ="navbar">           
                 <div class = "logoborder">
                 <div class ="logo">
@@ -127,7 +127,7 @@
                 <p class = "tealign hov">Blends</p>
             </div>
     </div>
-    <!-- The three columns with the background images fetched from an api -->
+    <!-- The three columns with the background images from the original site -->
         <div class="three">
         <div class="three1" id = "one">
             <h1 class="centeredmain">Teas</h1>
@@ -191,8 +191,7 @@
                 <li><h3>LEGAL</h3></li>
             </ul>  
         </div>  
-    </div>
-    
+    </div> 
     <div class = "foothead">
         <div>
             <ul>
@@ -225,7 +224,9 @@
 
     </div>
 
-<p class="midfoot">(c) 2022 Swallowtail Tea</p>
+<p class="midfoot">
+    (c) 2022 Swallowtail Tea
+</p>
 
     <script src="js/main.js"></script>
 
